name:                non-stack-yesod
version:             0.1.0.0
author:              Hiroshi Ogawa
maintainer:          hi.ogawa.zz@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:       -threaded -Wall -fno-warn-unused-do-bind -fno-warn-type-defaults
  hs-source-dirs:    src
  exposed-modules:   AppMain
                     App
                     Models
                     EnvVarLookup
                     Cors
  default-language:  Haskell2010
  build-depends:     aeson
                   , base
                   , bytestring
                   , monad-logger
                   , persistent
                   , persistent-postgresql
                   , persistent-template
                   , template-haskell
                   , text
                   , transformers
                   , warp
                   , yesod
                   , wai
                   , http-types

executable non-stack-yesod
  main-is:           main.hs
  ghc-options:       -static -threaded -Wall -fno-warn-unused-do-bind -fno-warn-type-defaults
  hs-source-dirs:    .
  default-language:  Haskell2010
  build-depends:     non-stack-yesod
                   , base

test-suite test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  ghc-options:       -threaded -Wall -fno-warn-unused-do-bind -fno-warn-type-defaults
  hs-source-dirs:    test
  default-language:  Haskell2010
  build-depends:     non-stack-yesod
                   , aeson
                   , base
                   , bytestring
                   , monad-logger
                   , persistent
                   , persistent-postgresql
                   , text
                   , transformers
                   , yesod
                   , yesod-test
                   , wai
                   , wai-extra
                   , http-types
                   , hspec
                   , hspec-wai
